[gd_scene load_steps=11 format=2]

[ext_resource path="res://gui/Lato-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/Lato-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://level/dirt.png" type="Texture" id=3]
[ext_resource path="res://main/Shop.gd" type="Script" id=4]
[ext_resource path="res://gui/theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 2 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.5, 0.5, 0.5, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="CenterContainer"]
margin_left = 38.0
margin_top = 96.0
margin_right = 538.0
margin_bottom = 927.0
custom_constants/separation = 15

[node name="Title" type="Label" parent="CenterContainer/Menu"]
margin_right = 500.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )
text = "STORE"
align = 1

[node name="Gold" type="Label" parent="CenterContainer/Menu"]
margin_top = 103.0
margin_right = 500.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 2 )
text = "Gold: 0"
align = 1

[node name="slow_time" type="HBoxContainer" parent="CenterContainer/Menu"]
margin_top = 177.0
margin_right = 500.0
margin_bottom = 223.0
custom_constants/separation = 10

[node name="Name" type="Label" parent="CenterContainer/Menu/slow_time"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 38.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 3 )
text = "Thruster Fuel"
align = 2

[node name="Value" type="Label" parent="CenterContainer/Menu/slow_time"]
margin_left = 260.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 38.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1

[node name="Cost" type="Label" parent="CenterContainer/Menu/slow_time"]
margin_left = 330.0
margin_top = 8.0
margin_right = 410.0
margin_bottom = 38.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 3 )
text = "100"
align = 2

[node name="Button" type="Button" parent="CenterContainer/Menu/slow_time"]
margin_left = 420.0
margin_right = 500.0
margin_bottom = 46.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 3 )
text = "Buy"

[node name="missiles" type="HBoxContainer" parent="CenterContainer/Menu"]
margin_top = 238.0
margin_right = 500.0
margin_bottom = 284.0
custom_constants/separation = 10

[node name="Name" type="Label" parent="CenterContainer/Menu/missiles"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 38.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 3 )
text = "Starting Missiles"
align = 2

[node name="Value" type="Label" parent="CenterContainer/Menu/missiles"]
margin_left = 260.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 38.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1

[node name="Cost" type="Label" parent="CenterContainer/Menu/missiles"]
margin_left = 330.0
margin_top = 8.0
margin_right = 410.0
margin_bottom = 38.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 3 )
text = "100"
align = 2

[node name="Button" type="Button" parent="CenterContainer/Menu/missiles"]
margin_left = 420.0
margin_right = 500.0
margin_bottom = 46.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 3 )
text = "Buy"

[node name="missile_bounces" type="HBoxContainer" parent="CenterContainer/Menu"]
margin_top = 299.0
margin_right = 500.0
margin_bottom = 345.0
custom_constants/separation = 10

[node name="Name" type="Label" parent="CenterContainer/Menu/missile_bounces"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 38.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 3 )
text = "Missile Bounces"
align = 2

[node name="Value" type="Label" parent="CenterContainer/Menu/missile_bounces"]
margin_left = 260.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 38.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1

[node name="Cost" type="Label" parent="CenterContainer/Menu/missile_bounces"]
margin_left = 330.0
margin_top = 8.0
margin_right = 410.0
margin_bottom = 38.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 3 )
text = "100"
align = 2

[node name="Button" type="Button" parent="CenterContainer/Menu/missile_bounces"]
margin_left = 420.0
margin_right = 500.0
margin_bottom = 46.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 3 )
text = "Buy"

[node name="shields" type="HBoxContainer" parent="CenterContainer/Menu"]
margin_top = 360.0
margin_right = 500.0
margin_bottom = 406.0
custom_constants/separation = 10

[node name="Name" type="Label" parent="CenterContainer/Menu/shields"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 38.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 3 )
text = "Explosive Shields"
align = 2

[node name="Value" type="Label" parent="CenterContainer/Menu/shields"]
margin_left = 260.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 38.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1

[node name="Cost" type="Label" parent="CenterContainer/Menu/shields"]
margin_left = 330.0
margin_top = 8.0
margin_right = 410.0
margin_bottom = 38.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 3 )
text = "100"
align = 2

[node name="Button" type="Button" parent="CenterContainer/Menu/shields"]
margin_left = 420.0
margin_right = 500.0
margin_bottom = 46.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 3 )
text = "Buy"

[node name="gold_multiplier" type="HBoxContainer" parent="CenterContainer/Menu"]
margin_top = 421.0
margin_right = 500.0
margin_bottom = 467.0
custom_constants/separation = 10

[node name="Name" type="Label" parent="CenterContainer/Menu/gold_multiplier"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 38.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 3 )
text = "Golden Replicator"
align = 2

[node name="Value" type="Label" parent="CenterContainer/Menu/gold_multiplier"]
margin_left = 260.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 38.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1

[node name="Cost" type="Label" parent="CenterContainer/Menu/gold_multiplier"]
margin_left = 330.0
margin_top = 8.0
margin_right = 410.0
margin_bottom = 38.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 3 )
text = "100"
align = 2

[node name="Button" type="Button" parent="CenterContainer/Menu/gold_multiplier"]
margin_left = 420.0
margin_right = 500.0
margin_bottom = 46.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 3 )
text = "Buy"

[node name="Done" type="Button" parent="CenterContainer/Menu"]
margin_top = 482.0
margin_right = 500.0
margin_bottom = 528.0
custom_fonts/font = SubResource( 3 )
text = "Done"

[node name="Control" type="Control" parent="CenterContainer/Menu"]
margin_top = 543.0
margin_right = 500.0
margin_bottom = 553.0
rect_min_size = Vector2( 0, 10 )

[node name="Last" type="Label" parent="CenterContainer/Menu"]
margin_top = 568.0
margin_right = 500.0
margin_bottom = 607.0
custom_fonts/font = SubResource( 4 )
text = "Last: 0"
align = 1

[node name="Best" type="Label" parent="CenterContainer/Menu"]
margin_top = 622.0
margin_right = 500.0
margin_bottom = 661.0
custom_fonts/font = SubResource( 4 )
text = "Best: 0"
align = 1

[node name="Control2" type="Control" parent="CenterContainer/Menu"]
margin_top = 676.0
margin_right = 500.0
margin_bottom = 696.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Menu"]
margin_top = 711.0
margin_right = 500.0
margin_bottom = 741.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/Menu/HBoxContainer"]
margin_right = 120.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Volume"
align = 2
valign = 1

[node name="MainVolume" type="HSlider" parent="CenterContainer/Menu/HBoxContainer"]
margin_left = 140.0
margin_right = 500.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/Menu"]
margin_top = 756.0
margin_right = 500.0
margin_bottom = 786.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/Menu/HBoxContainer2"]
margin_right = 120.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Music"
align = 2
valign = 1

[node name="MusicVolume" type="HSlider" parent="CenterContainer/Menu/HBoxContainer2"]
margin_left = 140.0
margin_right = 500.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/Menu"]
margin_top = 801.0
margin_right = 500.0
margin_bottom = 831.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/Menu/HBoxContainer3"]
margin_right = 120.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Effects"
align = 2
valign = 1

[node name="EffectsVolume" type="HSlider" parent="CenterContainer/Menu/HBoxContainer3"]
margin_left = 140.0
margin_right = 500.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
max_value = 1.0
step = 0.01
value = 0.5

[connection signal="mouse_entered" from="CenterContainer/Menu/Done" to="." method="_on_mouseover"]
[connection signal="pressed" from="CenterContainer/Menu/Done" to="." method="_on_Done_pressed"]
[connection signal="value_changed" from="CenterContainer/Menu/HBoxContainer/MainVolume" to="." method="_on_MainVolume_value_changed"]
[connection signal="value_changed" from="CenterContainer/Menu/HBoxContainer2/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="CenterContainer/Menu/HBoxContainer3/EffectsVolume" to="." method="_on_EffectsVolume_value_changed"]
